# Satellite_simulator

./: .gitignore  CMakeLists.txt
include/lib/: SDL2.lib  SDL2_image.lib  SDL2main.lib
src/: source.cpp
src/Compute_module/: compute.cppm
src/Main_module/: main.cppm
src/Window_module/: window.cppm  window_interface.cppm
